# stride

./: .clang-format  .gitignore  .travis.yml  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeLocal.cmake  CMakeLocalConfig.cmake  CMakeReport.cmake  DEPENDENCIES.txt  INSTALL.txt  LICENSE.txt  Makefile  Notes.md  PLATFORMS.txt  README.md  bitbucket-pipelines.yml  perform_bench.sh
gui/: CMakeLists.txt  Makefile  gui  main.cpp  main.qml  test.pro
gui/gui_autogen/: moc_predefs.h
gui/src/: main.cpp
main/cpp/: CMakeLists.txt  Makefile  prototype_hdf5  stride
main/cpp/behaviour/: BeliefSeeder.cpp  BeliefSeeder.h
main/cpp/calendar/: Calendar.cpp  Calendar.h  DaysOffAll.h  DaysOffInterface.h  DaysOffNone.h  DaysOffSchool.h  DaysOffStandard.h
main/cpp/calibration/: Boxplot.cpp  Boxplot.h  BoxplotData.h  BoxplotGenerator.cpp  BoxplotGenerator.h  CMakeLists.txt  CalibrationRunner.cpp  CalibrationRunner.h  Calibrator.cpp  Calibrator.h  ConfigFileCalibrationRunner.cpp  ConfigFileCalibrationRunner.h  TestCalibrationRunner.cpp  TestCalibrationRunner.h
main/cpp/contact/: AgeBrackets.h  AgeContactProfile.cpp  AgeContactProfile.h  AgeContactProfiles.h  ContactHandler.h  ContactLogMode.cpp  ContactLogMode.h  ContactPool.cpp  ContactPool.h  ContactPoolSys.cpp  ContactPoolSys.h  ContactType.cpp  ContactType.h  IdSubscriptArray.h  Infector.cpp  Infector.h  InfectorExec.h  InfectorMap.h  LogPolicy.h  R0Policy.h  TrackPolicy.h  TransmissionProfile.cpp  TransmissionProfile.h
main/cpp/core/: Cluster.cpp  Cluster.h  ClusterType.cpp  ClusterType.h  ContactHandler.h  ContactLogMode.cpp  ContactLogMode.h  ContactPool.cpp  ContactPool.h  ContactPoolSys.h  ContactPoolType.cpp  ContactPoolType.h  ContactProfile.cpp  ContactProfile.h  ContactProfiles.h  DiseaseProfile.cpp  DiseaseProfile.h  Health.cpp  Health.h  Infector.cpp  Infector.h  LogMode.cpp  LogMode.h  RngHandler.h  TransmissionProfile.cpp  TransmissionProfile.h
main/cpp/disease/: DiseaseSeeder.cpp  DiseaseSeeder.h  Health.cpp  Health.h  HealthSeeder.cpp  HealthSeeder.h  Immunizer.cpp  Immunizer.h  PublicHealthAgency.cpp  PublicHealthAgency.h
main/cpp/execs/: CMakeLists.txt  ControlHelper.cpp  ControlHelper.h  GenPopController.cpp  GenPopController.h  SimController.cpp  SimController.h  StanController.cpp  StanController.h  calibration.cpp  gengeopop.cpp  genpop.cpp  main.cpp  stride.cpp
main/cpp/gengeopop/: CMakeLists.txt  College.cpp  College.h  Community.cpp  Community.h  ContactCenter.cpp  ContactCenter.h  Coordinate.h  GenGeoPopController.cpp  GenGeoPopController.h  GenPopController.cpp  GenPopController.h  GeoAggregator.h  GeoGrid.cpp  GeoGrid.h  GeoGridBuilder.cpp  GeoGridBuilder.h  GeoGridConfig.cpp  GeoGridConfig.h  GeoGridConfigBuilder.cpp  GeoGridConfigBuilder.h  GeoGridKdTree.h  Household.cpp  Household.h  K12School.cpp  K12School.h  KdTree.h  KdTree2DPoint.h  Location.cpp  Location.h  PrimaryCommunity.cpp  PrimaryCommunity.h  SecondaryCommunity.cpp  SecondaryCommunity.h  Workplace.cpp  Workplace.h
main/cpp/geo/: GeoCoordCalculator.h  GeoCoordinate.h
main/cpp/geopop/: CMakeLists.txt  College.cpp  College.h  CollegeCenter.cpp  CollegeCenter.h  ContactCenter.cpp  ContactCenter.h  Coordinate.h  GeoGrid.cpp  GeoGrid.h  GeoGridBuilder.cpp  GeoGridBuilder.h  GeoGridConfig.cpp  GeoGridConfig.h  GeoGridConfigBuilder.cpp  GeoGridConfigBuilder.h  Household.cpp  Household.h  HouseholdCenter.cpp  HouseholdCenter.h  K12School.cpp  K12School.h  K12SchoolCenter.cpp  K12SchoolCenter.h  Location.cpp  Location.h  PoolParams.h  PrimaryCommunity.cpp  PrimaryCommunity.h  PrimaryCommunityCenter.cpp  PrimaryCommunityCenter.h  SecondaryCommunity.cpp  SecondaryCommunity.h  SecondaryCommunityCenter.cpp  SecondaryCommunityCenter.h  Workplace.cpp  Workplace.h  WorkplaceCenter.cpp  WorkplaceCenter.h
main/cpp/immunity/: ImmunizationProfile.h  Immunizer.cpp  Immunizer.h  Vaccinator.cpp  Vaccinator.h
main/cpp/myhayai/: BenchControlHelper.cpp  BenchControlHelper.h  Benchmark.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  Console.h  ConsoleViewer.h  InfoFactory.h  LICENSE.md  MyhayaiController.cpp  MyhayaiController.h  Payload.h  PtreeViewer.h  README.md  Test.h  TestDescriptor.h  TestDescriptors.cpp  TestDescriptors.h  TestFactory.h  TestResult.h
main/cpp/output/: AdoptedFile.cpp  AdoptedFile.h  CasesFile.cpp  CasesFile.h  InfectedFile.cpp  InfectedFile.h  PersonFile.cpp  PersonFile.h  PersonsFile.cpp  PersonsFile.h  SummaryFile.cpp  SummaryFile.h
main/cpp/pool/: AgeBrackets.h  ContactPool.cpp  ContactPool.h  ContactPoolSys.h  ContactPoolType.cpp  ContactPoolType.h  ContactProfiles.h  IdSubscriptArray.h  PoolConfig.h
main/cpp/pop/: AbstractPopBuilder.cpp  AbstractPopBuilder.h  Age.h  ContactPoolBuilder.cpp  ContactPoolBuilder.h  DefaultPopBuilder.cpp  DefaultPopBuilder.h  GenPopBuilder.cpp  GenPopBuilder.h  GeoPopBuilder.cpp  GeoPopBuilder.h  HealthSampler.cpp  HealthSampler.h  HealthSeeder.cpp  HealthSeeder.h  ImportPopBuilder.cpp  ImportPopBuilder.h  Person.cpp  Person.h  PopBuilder.cpp  PopBuilder.h  PopPoolBuilder.cpp  PopPoolBuilder.h  Population.cpp  Population.h  PopulationBuilder.cpp  PopulationBuilder.h  SurveySeeder.cpp  SurveySeeder.h
main/cpp/popgen/: AliasSampler.cpp  FamilyParser.cpp  FamilyParser.h  PopulationGenerator.cpp  PopulationGenerator.h  main.cpp  utils.cpp  utils.h
main/cpp/popgen2/: AliasMethod.cpp  AliasMethod.h  AliasMethodTools.h  Community.cpp  Community.h  GeneratorPerson.cpp  GeneratorPerson.h  GrahamScan.cpp  GrahamScan.h  Household.cpp  Household.h  RNG.h  Society.cpp  Society.h  SocietyCSVWriter.cpp  SocietyCSVWriter.h  SocietyGenerator.cpp  SocietyGenerator.h  SocietyWriter.h  main.cpp
main/python/: CMakeLists.txt  Makefile  create_contactmatrix.py  interactive_maps.py  plot_maps.py  pystride.py  wrapper_stride.py
main/resources/: CMakeLists.txt
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  Makefile
test/python/: CMakeLists.txt  Makefile  testForker.py  testInfected.py  testPrint.py  testSimple.py  testSmoke.py  testVaccinate.py
test/resources/: CMakeLists.txt  Makefile
(+15767 files in other folders)
